# ai-video

./: .gitignore  .gitmodules  README.md  gst.code-workspace
content/ai-algo/: go.mod  interview.go  interview_test.go
content/gst-example/: CMakeLists.txt  README.md  gst-example.kdev4  meson.build
content/gst-example/.kdev4/: gst-example.kdev4
content/gst-example/examples/: CMakeLists.txt  bus_example.c  meson.build  snippets.c
content/gst-example/examples/tutorials/: CMakeLists.txt  basic-tutorial-1.c  basic-tutorial-12.c  basic-tutorial-13.c  basic-tutorial-2.c  basic-tutorial-3.c  basic-tutorial-4.c  basic-tutorial-5.c  basic-tutorial-6.c  basic-tutorial-7.c  basic-tutorial-8.c  basic-tutorial-9.c  meson.build  playback-tutorial-1.c  playback-tutorial-2.c  playback-tutorial-3.c  playback-tutorial-4.c
content/gst-example/network/: CMakeLists.txt
content/gst-example/network/http-launch/: http-launch.c
content/gst-example/playback/: CMakeLists.txt
content/gst-example/playback/player/gst-play/: gst-play-kb.c  gst-play.c
content/gst-example/playback/player/gtk/: gtk-play.c  gtk-video-renderer.h
content/gst-example/playback/player/gtk/resources/: gresources.xml
content/gst-example/vulkan/android/jni/: vulkan-1.c
content/gst-example/webrtc/: CMakeLists.txt
content/gst-example/webrtc/sendonly/: webrtc-recvonly-h264.c  webrtc-unidirectional-h264.c
content/gst-example/webrtc/sendrecv/gst/: webrtc-sendrecv.c
content/intel/: intel--ffmpeg.md
content/red5/: pom.xml
content/red5/red5-build/: pom.xml
content/red5/red5-common/: pom.xml
content/red5/red5-io/: pom.xml
content/red5/red5-server/: pom.xml
content/red5/red5-service/: pom.xml
content/restcomm/Restcomm-Connect/restcomm/: pom.xml
content/restcomm/Restcomm-Connect/restcomm/restcomm.mscontrol.jsr309/: pom.xml
content/restcomm/Restcomm-Connect/restcomm/restcomm.routing/: pom.xml
content/restcomm/mediaserver/: pom.xml
content/restcomm/mediaserver/bootstrap/: pom.xml
content/restcomm/mediaserver/bootstrap/src/main/java/org/restcomm/media/bootstrap/ioc/provider/mgcp/: MgcpChannelProvider.java
content/restcomm/mediaserver/core/: pom.xml
content/restcomm/mediaserver/network/: pom.xml
content/restcomm/mediaserver/network/src/main/java/org/restcomm/media/network/deprecated/channel/: NetworkGuard.java
content/restcomm/mediaserver/resources/mediaplayer/: pom.xml
content/restcomm/mediaserver/rtp/: pom.xml
content/samples/: CMakeLists.txt  WORKSPACE
content/samples/ffmpeg-for-MFC/ffmpegmfc/: SysinfoDlg.cpp  SysinfoDlg.h  TaskinfoDlg.cpp  TaskinfoDlg.h  ffmpeg.c  ffmpeg.h  ffmpegmfc.cpp  ffmpegmfc.h  ffmpegmfcDlg.cpp  ffmpegmfcDlg.h  stdafx.cpp  stdafx.h
content/samples/ffmpeg-for-MFC/ffmpegmfc/include/libavutil/: attributes.h
content/samples/ffmpeg-samples/: BUILD.bazel
content/samples/ffmpeg-samples/src/: muxer.c
content/samples/simplest_video_website/: .project
content/x264-go/: encode.go  go.mod
content/x264-go/examples/basic/: basic.go
docs/: _navbar.md  _sidebar.md  index.html
docs/srs/: README.md
docs/test/: _sidebar.md
