executable('basic-tutorial-1', 'basic-tutorial-1.c', dependencies : [gst_dep, gio_dep])
executable('basic-tutorial-2', 'basic-tutorial-2.c', dependencies : [gst_dep, gio_dep])
executable('basic-tutorial-3', 'basic-tutorial-3.c', dependencies : [gst_dep, gio_dep])
executable('basic-tutorial-4', 'basic-tutorial-4.c', dependencies : [gst_dep, gio_dep])
executable('basic-tutorial-5', 'basic-tutorial-5.c', dependencies : [gst_dep, gio_dep])
executable('basic-tutorial-6', 'basic-tutorial-6.c', dependencies : [gst_dep, gio_dep])
executable('basic-tutorial-7', 'basic-tutorial-7.c', dependencies : [gst_dep, gio_dep])
executable('basic-tutorial-8', 'basic-tutorial-8.c', dependencies : [gst_dep, gio_dep])
executable('basic-tutorial-9', 'basic-tutorial-9.c', dependencies : [gst_dep, gio_dep])
executable('basic-tutorial-12', 'basic-tutorial-12.c', dependencies : [gst_dep, gio_dep])
executable('basic-tutorial-13', 'basic-tutorial-13.c', dependencies : [gst_dep, gio_dep])
# executable('basic-tutorial-15', 'basic-tutorial-15.c', dependencies : [gst_dep, gio_dep])
executable('playback-tutorial-1', 'playback-tutorial-1.c', dependencies : [gst_dep, gio_dep])
executable('playback-tutorial-2', 'playback-tutorial-2.c', dependencies : [gst_dep, gio_dep])
executable('playback-tutorial-3', 'playback-tutorial-3.c', dependencies : [gst_dep, gio_dep])
executable('playback-tutorial-4', 'playback-tutorial-4.c', dependencies : [gst_dep, gio_dep])
executable('playback-tutorial-5', 'playback-tutorial-5.c', dependencies : [gst_dep, gio_dep])
executable('playback-tutorial-6', 'playback-tutorial-6.c', dependencies : [gst_dep, gio_dep])
executable('playback-tutorial-7', 'playback-tutorial-7.c', dependencies : [gst_dep, gio_dep])